--- a/index.html
+++ b/index.html
@@ -1,135 +1,145 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy 20/10 💐</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #ffe6f2, #fff5f7);
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      flex-direction: column;
-      transition: background 1s ease;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>20/10 Tặng Gấu 💖</title>
+<style>
+  /* ===== Nền & chung ===== */
+  body {
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(135deg, #ffe6f2, #fff5f7);
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    transition: background 1s ease;
+  }
+  /* ===== Chữ gõ máy ===== */
+  #typing {
+    font-size: 2.5rem;
+    color: #ff4081;
+    cursor: pointer;
+    text-align: center;
+  }
 
-    h1 {
-      font-size: 2.5rem;
-      color: #ff4081;
-      animation: bounce 1.5s infinite;
-      cursor: pointer;
-      text-align: center;
-    }
+  /* ===== Fade/ẩn ===== */
+  .hidden { display: none; opacity: 0; }
+  .fade-in { animation: fadeIn 1s forwards; }
+  @keyframes fadeIn { from {opacity:0;} to{opacity:1;} }
 
-    @keyframes bounce {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-10px); }
-    }
+  /* ===== Tim bay ===== */
+  .hearts { position: fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; overflow:hidden; z-index:0; }
+  .heart { position: absolute; color: #ff99cc; font-size: 20px; animation: float 5s linear infinite; }
+  @keyframes float {
+    0% { transform: translateY(100vh) scale(1); opacity: 1; }
+    100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
+  }
 
-    .hidden { display: none; }
+  /* ===== Màn 2 chữ ===== */
+  #screen2 { font-size:2rem; color:#ff6699; text-align:center; cursor:pointer; transition: transform 0.5s; }
 
-    .message {
-      font-size: 1.4rem;
-      color: #ff6699;
-      text-align: center;
-      max-width: 80%;
-      line-height: 1.6;
-      margin-top: 20px;
-    }
+  /* ===== Màn 3 ảnh & lời chúc ===== */
+  #screen3 { display:flex; flex-direction:column; align-items:center; text-align:center; }
+  #screen3 img { width:250px; height:auto; border-radius:20px; margin-top:20px; box-shadow:0 5px 15px rgba(0,0,0,0.2); transition: transform 0.3s; }
+  #screen3 img:hover { transform: scale(1.1); }
+  .message { font-size:1.4rem; color:#ff4081; max-width:80%; line-height:1.6; margin-top:20px; opacity:0; }
 
-    img {
-      width: 250px;
-      height: auto;
-      border-radius: 20px;
-      margin-top: 20px;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      animation: fadeIn 2s ease;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .hearts {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      overflow: hidden;
-      z-index: 0;
-    }
-
-    .heart {
-      position: absolute;
-      color: #ff99cc;
-      font-size: 20px;
-      animation: float 5s linear infinite;
-    }
-
-    @keyframes float {
-      0% { transform: translateY(100vh) scale(1); opacity: 1; }
-      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
-    }
-  </style>
+</style>
 </head>
 <body>
 
-  <div class="hearts" id="hearts"></div>
+<div class="hearts" id="hearts"></div>
 
-  <h1 id="step1">Hi Gấu &gt;.&lt;</h1>
-  <h1 id="step2" class="hidden">Happy Vietnamese Women’s Day 💐</h1>
-  <div id="final" class="hidden">
-    <img src="https://github.com/thanhnguyennnnn/nguyenhothaonguyen/blob/194b3525240a9acb3dada1a53aed29fa86997f50/photo_2025-10-20_10-01-42.jpg" alt="ảnh dễ thương"/>
-    <p class="message">
-      Chúc cho em những năm tháng sau này có thể cười nhiều hơn, hạnh phúc nhân đôi, không bao giờ phải khóc.<br>
-      Chúc em trẻ mãi không già, bao nhiêu hạnh phúc đều là của em 💖
-    </p>
-    <audio id="music" autoplay loop>
-      <source src="https://cdn.pixabay.com/download/audio/2023/02/28/audio_0c06c5e49a.mp3" type="audio/mpeg">
-    </audio>
-  </div>
+<!-- Màn 1: typing effect -->
+<h1 id="typing"></h1>
 
-  <script>
-    const step1 = document.getElementById('step1');
-    const step2 = document.getElementById('step2');
-    const final = document.getElementById('final');
-    const heartsContainer = document.getElementById('hearts');
+<!-- Màn 2: chữ chúc -->
+<h1 id="screen2" class="hidden">Happy Vietnamese Women’s Day 💐</h1>
 
-    step1.addEventListener('click', () => {
-      step1.classList.add('hidden');
-      step2.classList.remove('hidden');
-      document.body.style.background = 'linear-gradient(135deg, #fff0f5, #ffe6eb)';
-    });
+<!-- Màn 3: ảnh + lời chúc -->
+<div id="screen3" class="hidden">
+  <img id="slide" src="https://i.imgur.com/nQwZp9v.jpg" alt="Gấu của anh 💖">
+  <p class="message" id="message">Chúc cho em những năm tháng sau này có thể cười nhiều hơn, hạnh phúc nhân đôi, không bao giờ phải khóc. Chúc em trẻ mãi không già, bao nhiêu hạnh phúc đều là của em 💖</p>
+  <audio id="music" autoplay loop>
+    <source src="https://cdn.pixabay.com/download/audio/2023/02/28/audio_0c06c5e49a.mp3" type="audio/mpeg">
+  </audio>
+</div>
 
-    step2.addEventListener('click', () => {
-      step2.classList.add('hidden');
-      final.classList.remove('hidden');
-      document.body.style.background = 'linear-gradient(135deg, #ffeaf5, #fff0f8)';
-      startHearts();
-    });
+<script>
+  /* ===== Typing effect ===== */
+  const text = "Hi Gấu >.<";
+  const typingEl = document.getElementById('typing');
+  let index = 0;
 
-    function startHearts() {
-      setInterval(() => {
-        const heart = document.createElement('div');
-        heart.classList.add('heart');
-        heart.textContent = '💖';
-        heart.style.left = Math.random() * 100 + 'vw';
-        heart.style.animationDuration = (3 + Math.random() * 3) + 's';
-        heartsContainer.appendChild(heart);
-        setTimeout(() => heart.remove(), 5000);
-      }, 300);
+  function type() {
+    if(index < text.length) {
+      typingEl.textContent += text.charAt(index);
+      index++;
+      setTimeout(type, 200);
+    } else {
+      typingEl.addEventListener('click', goScreen2);
     }
-  </script>
+  }
+  type();
+
+  /* ===== Chuyển màn 1 -> màn 2 ===== */
+  const screen2 = document.getElementById('screen2');
+  function goScreen2() {
+    typingEl.classList.add('hidden');
+    screen2.classList.remove('hidden');
+    screen2.classList.add('fade-in');
+    document.body.style.background = 'linear-gradient(135deg, #fff0f5, #ffe6eb)';
+    screen2.addEventListener('click', goScreen3);
+  }
+
+  /* ===== Chuyển màn 2 -> màn 3 ===== */
+  const screen3 = document.getElementById('screen3');
+  const message = document.getElementById('message');
+  function goScreen3() {
+    screen2.classList.add('hidden');
+    screen3.classList.remove('hidden');
+    screen3.classList.add('fade-in');
+    message.classList.add('fade-in');
+    document.body.style.background = 'linear-gradient(135deg, #ffeaf5, #fff0f8)';
+    startHearts();
+    startSlideshow();
+  }
+
+  /* ===== Tim bay ===== */
+  const heartsContainer = document.getElementById('hearts');
+  function startHearts() {
+    setInterval(() => {
+      const heart = document.createElement('div');
+      heart.classList.add('heart');
+      heart.textContent = '💖';
+      heart.style.left = Math.random() * 100 + 'vw';
+      heart.style.animationDuration = (3 + Math.random() * 3) + 's';
+      heartsContainer.appendChild(heart);
+      setTimeout(() => heart.remove(), 5000);
+    }, 300);
+  }
+
+  /* ===== Slideshow ảnh ===== */
+  const slides = [
+    "https://i.imgur.com/nQwZp9v.jpg",
+    "https://i.imgur.com/VcG2K6N.jpg",
+    "https://i.imgur.com/W6k5nV7.jpg"
+  ];
+  let current = 0;
+  const slideEl = document.getElementById('slide');
+  function startSlideshow() {
+    setInterval(() => {
+      current = (current + 1) % slides.length;
+      slideEl.src = slides[current];
+    }, 4000); // mỗi 4 giây đổi ảnh
+  }
+
+</script>
+
 </body>
 </html>
-
-
