--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <h1 id="step1">Hi Gấu &gt;.&lt;</h1>
   <h1 id="step2" class="hidden">Happy Vietnamese Women’s Day 💐</h1>
   <div id="final" class="hidden">
-    <img src="https://i.imgur.com/nQwZp9v.jpg" alt="ảnh dễ thương"/>
+    <img src="https://github.com/thanhnguyennnnn/nguyenhothaonguyen/blob/e45c6f135c5020d67cb602e6b8a28c0d97c0d8b6/photo_2025-10-20_10-01-42.jpg" alt="ảnh dễ thương"/>
     <p class="message">
       Chúc cho em những năm tháng sau này có thể cười nhiều hơn, hạnh phúc nhân đôi, không bao giờ phải khóc.<br>
       Chúc em trẻ mãi không già, bao nhiêu hạnh phúc đều là của em 💖
@@ -131,3 +131,4 @@
   </script>
 </body>
 </html>
+
