--- a/index.html
+++ b/index.html
@@ -89,8 +89,15 @@
   <h1 id="step2" class="hidden">Happy Vietnamese Women’s Day 💐</h1>
   <div id="final" class="hidden">
     <p class="message">
-      Chúc cho em những năm tháng sau này có thể cười nhiều hơn, hạnh phúc nhân đôi, không bao giờ phải khóc.<br>
-      Chúc em trẻ mãi không già, bao nhiêu hạnh phúc đều là của em 💖
+      Chúc cho em những năm tháng sau này có thể cười nhiều hơn, hạnh phúc hơn, không bao giờ phải khóc.<br>
+      Chúc em trẻ mãi không già, bao nhiêu hạnh phúc đều là của em 💖<br>
+      Chúc em mái tóc luôn xanh<br>
+      Răng em luôn trắng, má em luôn hồng<br>
+      Chúc em đừng sớm lấy chồng<br>
+      Để tiền đi hát, đi nhậu, vui hơn<br>
+      Nhưng mong em chẳng cô đơn<br>
+      Có anh sớm tối chuyện trò cùng nhau<br>
+      HAHAHAHAHAHAHAHAHAHAHAHAHAHAHA!!!!
     </p>
     <audio id="music" autoplay loop>
       <source src="https://cdn.pixabay.com/download/audio/2023/02/28/audio_0c06c5e49a.mp3" type="audio/mpeg">
@@ -130,5 +137,6 @@
   </script>
 </body>
 </html>
+
 
 
