--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
   <h1 id="step2" class="hidden">Happy Vietnamese Women’s Day 💐</h1>
   <div id="final" class="hidden">
     <p class="message">
-           Chúc cho em những năm tháng sau này có thể cười nhiều hơn, hạnh phúc hơn, không bao giờ phải khóc.<br>
-          Chúc em trẻ mãi không già, bao nhiêu hạnh phúc đều là của em 💖<br>
+           Chúc cho em những năm tháng sau này có thể cười nhiều hơn<br> 
+           Hạnh phúc hơn, không bao giờ phải khóc.<br>
+      Chúc em trẻ mãi không già, bao nhiêu hạnh phúc đều là của em 💖<br>
       Chúc em mái tóc luôn xanh<br>
       Răng em luôn trắng, má em luôn hồng<br>
       Chúc em đừng sớm lấy chồng<br>
@@ -137,6 +138,7 @@
   </script>
 </body>
 </html>
+
 
 
 
