--- a/index.html
+++ b/index.html
@@ -89,16 +89,18 @@
   <h1 id="step2" class="hidden">Happy Vietnamese Women’s Day 💐</h1>
   <div id="final" class="hidden">
     <p class="message">
-           Chúc cho em những năm tháng sau này có thể cười nhiều hơn<br> 
-           Hạnh phúc hơn, không bao giờ phải khóc.<br>
-      Chúc em trẻ mãi không già, bao nhiêu hạnh phúc đều là của em 💖<br>
+      Chúc cho em những năm tháng sau này<br> 
+      có thể cười nhiều hơn<br> 
+      Hạnh phúc hơn, không bao giờ phải khóc<br>
+      Chúc em trẻ mãi không già,<br>
+      Bao nhiêu hạnh phúc đều là của em 💖<br>
       Chúc em mái tóc luôn xanh<br>
       Răng em luôn trắng, má em luôn hồng<br>
       Chúc em đừng sớm lấy chồng<br>
       Để tiền đi hát, đi nhậu, vui hơn<br>
       Nhưng mong em chẳng cô đơn<br>
       Có anh sớm tối chuyện trò cùng nhau<br>
-      HaHaHaHaHaHaHaHaHaHaHaHaHaHaHaHaHaHa!!!!
+      HaHaHaHaHaHaHaHaHaHa!!!!
     </p>
     <audio id="music" autoplay loop>
       <source src="https://cdn.pixabay.com/download/audio/2023/02/28/audio_0c06c5e49a.mp3" type="audio/mpeg">
@@ -138,6 +140,7 @@
   </script>
 </body>
 </html>
+
 
 
 
