--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <h1 id="step2" class="hidden">Happy Vietnamese Women’s Day 💐</h1>
   <div id="final" class="hidden">
     <p class="message">
-      Chúc cho em những năm tháng sau này<br> 
+      Chúc cho em những năm tháng sau này
       có thể cười nhiều hơn<br> 
       Hạnh phúc hơn, không bao giờ phải khóc<br>
       Chúc em trẻ mãi không già,<br>
@@ -140,6 +140,7 @@
   </script>
 </body>
 </html>
+
 
 
 
